Added Profile.html link on our own page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<! DOCTYPE html>
+<! DOCTYPE html
 <html>
 	<head>
 		<title>Home|Page</title>
 	</head>
 	<body>
-		<a href="contact.html">Contact</a>
+		<a href="Profile.html">Profile</a>
 		
 		<h1>Welcome to our home page</h1>
 		<hr>
